k8s-shared-infrastructure/argo/argo-workflows/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    name: argo
    project: tas
    purpose: workflow-engine
